--- a/freeling-demo/src/styles.css
+++ b/freeling-demo/src/styles.css
@@ -4,6 +4,7 @@
 
 html, body {
     height: 100%;
+    font-family: Roboto,sans-serif;
 }
 
 body {
@@ -14,8 +15,17 @@ body {
     width:1280px;
     margin: 0 auto;
     padding: 50px 70px;
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: -ms-flex;
     display: flex;
+    -moz-flex-direction: column;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -moz-align-items: center;
+    -webkit-align-items: center;
+    -ms-align-items: center;
     align-items: center;
 }
 
@@ -24,8 +34,13 @@ body {
 }
 
 .input-section {
+   display: -moz-flex;
+   display: -webkit-flex;
+   display: -ms-flex;
    display: flex;
-   flex-wrap: nowrap;
+   -moz-justify-content: space-between;
+   -webkit-justify-content: space-between;
+   -ms-justify-content: space-between;
    justify-content: space-between;
 }
 
@@ -42,7 +57,71 @@ body {
 .options-container {
     height: 340px;
     width: 32%;
-    background-color:beige;
+    font-size: 24px;
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    -moz-flex-direction: column;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -moz-justify-content: space-around;
+   -webkit-justify-content: space-around;
+   -ms-justify-content: space-around;
+    justify-content: space-around;
+    color:#5C5C5C;
+}
+
+
+.checkbox-label  {
+    display: block;
+    position: relative;
+    cursor: pointer;
+    padding-left: 35px;
+    font-size: inherit;
+}
+
+input[type="checkbox"] { 
+    position: absolute;
+    cursor: pointer;
+    opacity: 0;
+    height: 0;
+    width: 0;
+}
+
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #5C5C5C;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+}
+
+.checkmark:after {
+   content: "";
+   position: absolute;
+   display: none;
+}
+
+.checkbox-label input:checked ~ .checkmark:after {
+   display: block;
+} 
+
+.checkbox-label .checkmark:after {
+   left: 9px;
+   top: 5px;
+   width: 5px;
+   height: 10px;
+   border: solid #1598F7;
+   border-width: 0 3px 3px 0;
+   -moz-transform: rotate(45deg);
+   -webkit-transform: rotate(45deg);
+   -ms-transform: rotate(45deg);
+   transform: rotate(45deg);
 }
 
 .output-section {
@@ -54,7 +133,10 @@ body {
 @media screen and (max-width: 1025px) {
 
     .input-section {
-        flex-wrap: wrap;
+        -moz-flex-wrap: wrap;
+		-webkit-flex-wrap: wrap;
+		-ms-flex-wrap: wrap;
+		flex-wrap: wrap;
     }
     
     .container {
@@ -72,7 +154,10 @@ body {
 @media screen and (max-width: 767px) {
     
     .input-section {
-        flex-wrap: wrap;
+        -moz-flex-wrap: wrap;
+		-webkit-flex-wrap: wrap;
+		-ms-flex-wrap: wrap;
+		flex-wrap: wrap;
     }
     
     .container {
